k8s/manifests/infrastructure/api-gateway/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: { }
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - image: api-gateway:0.0.1-SNAPSHOT
          name: api-gateway
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 9000
