k8s/manifests/infrastructure/api-gateway/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: api-gateway
