k8s/manifests/infrastructure/api-gateway/admin-fe-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-fe-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - admin-fe.local
  rules:
    - backendRefs:
        - name: admin-fe
          port: 3002
