k8s/manifests/infrastructure/api-gateway/api-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - api.local
  rules:
    - backendRefs:
        - name: api-gateway
          port: 9000
