k8s/manifests/infrastructure/api-gateway/customer-fe-angular-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: customer-fe-angular-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - customer-fe-angular.local
  rules:
    - backendRefs:
        - name: customer-fe-angular
          port: 80
