k8s/manifests/infrastructure/api-gateway/customer-wallet-fe-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: customer-wallet-fe-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - customer-wallet-fe.local
  rules:
    - backendRefs:
        - name: customer-wallet-fe
          port: 3005
