k8s/manifests/infrastructure/api-gateway/kafka-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - kafka-ui.local
  rules:
    - backendRefs:
        - name: kafka-ui
          port: 8080
