k8s/manifests/infrastructure/api-gateway/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - keycloak.local
  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
