k8s/manifests/infrastructure/api-gateway/landing-fe-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: landing-fe-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - landing-fe.local
  rules:
    - backendRefs:
        - name: landing-fe
          port: 3005
