k8s/manifests/infrastructure/api-gateway/mailhog-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailhog-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - mailhog.local
  rules:
    - backendRefs:
        - name: mailhog
          port: 8025
