k8s/manifests/infrastructure/api-gateway/schema-registry-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: schema-registry-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - schema-registry.local
  rules:
    - backendRefs:
        - name: schema-registry
          port: 8081
