k8s/manifests/infrastructure/api-gateway/shop-fe-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-fe-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - shop-fe.local
  rules:
    - backendRefs:
        - name: shop-fe
          port: 3003
