k8s/manifests/infrastructure/api-gateway/tempo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo-route
spec:
  parentRefs:
    - name: api-gateway
  hostnames:
    - tempo.local
  rules:
    - backendRefs:
        - name: tempo
          port: 3100
